feat(runtime): apply per-MicroVM JVM overrides from runHookPayload
The /run hook already received AWS's per-MicroVM runHookPayload string but
ignored it. Interpret a non-empty payload as a small JSON document that
overrides JVM-launch config for that one MicroVM, so a single image can run
differently-tuned instances:

  { "minMemory": "6G", "maxMemory": "8G",
    "extraJvmArgs": ["-XX:+UseZGC"], "extraServerArgs": ["--world", "nether"] }

Only those four fields are accepted (decoded with DisallowUnknownFields). An
empty payload uses the base config; a malformed payload or any out-of-scope
field (e.g. javaBin, registry creds) fails the run hook with 500, so a MicroVM
never serves with a misconfiguration or an attacker-controlled binary/registry.

The overrides only touch the JVM argv, so state pull/push and terminate are
unaffected. A supervisor factory seam (mirroring the existing target seam)
lets the effective config reach the process and keeps handlers testable.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>